# image-label-tool

./: Cargo.toml  README.md  components.css  crates.js  help.html  index.css  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: gh-pages.yml
combined_test_macro/: Cargo.toml
combined_test_macro/src/: lib.rs
image_label_tool/: all.html  fn.add.html  fn.init_label_tool.html  index.html  sidebar-items.js  type.Annotation.html  type.Class.html
image_label_tool/annotated_image/: struct.AnnotatedImage.html
image_label_tool/app/: struct.App.html
image_label_tool/bbox/: struct.BBox.html
image_label_tool/components/add_image_button/: struct.AddImageButton.html
image_label_tool/components/header/: struct.Header.html
image_label_tool/components/images_list/: struct.ImagesList.html
image_label_tool/components/status_bar/: index.html  struct.Props.html  struct.StatusBar.html
image_label_tool/label_tool/: struct.LabelTool.html
image_label_tool/prelude/: enum.ImageStoreMsg.html  index.html  sidebar-items.js  struct.AddImageButton.html  struct.AnnotatedImage.html  struct.App.html  struct.BBox.html  struct.Header.html  struct.ImageStore.html  struct.ImagesList.html  struct.LabelTool.html  struct.StatusBar.html
image_label_tool/prelude/status_bar/: index.html  sidebar-items.js  struct.Props.html  struct.StatusBar.html
image_label_tool/stores/image_store/: enum.ImageStoreMsg.html  struct.ImageStore.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/wasm_bindgen/describe/: trait.WasmDescribe.js  trait.WasmDescribeVector.js
pkg/: README.md  image_label_tool.d.ts  image_label_tool.js  image_label_tool_bg.wasm  image_label_tool_bg.wasm.d.ts  package.json
src/: annotated_image.rs  app.rs  bbox.rs  editor.rs  header.rs  images_list.rs  label_tool.rs  labels.rs  lib.rs  upload_annotations.rs  upload_image.rs  use_canvas_image.rs  utils.rs
src/components/: add_image_button.rs  header.rs  images_list.rs  mod.rs
src/components/status_bar/: mod.rs
src/image_label_tool/: annotated_image.rs.html  app.rs.html  bbox.rs.html  download.rs.html  editor.rs.html  header.rs.html  images_list.rs.html  label_tool.rs.html  labels.rs.html  lib.rs.html  upload_annotations.rs.html  upload_image.rs.html  use_canvas_image.rs.html  utils.rs.html
src/image_label_tool/components/: add_image_button.rs.html  header.rs.html  images_list.rs.html  mod.rs.html
src/image_label_tool/stores/: image_store.rs.html  mod.rs.html
src/stores/: image_store.rs  mod.rs
(+13 files in other folders)
