[package]
name = "image-label-tool"
version = "0.1.2"
edition = "2021"
description = "Create bounding boxes around objects in an image and classify them according to your desired labels."
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/image-label-tool"
keywords = ["machine-learning", "label-tool", "annotation-tool"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.21.5"
console_error_panic_hook = "0.1"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23.0", default-features = false }
js-sys = "0.3.66"
rusttype = "0.9.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "ImageData",
] }
yew = { version = "0.21.0", features = ["csr"] }

[dev-dependencies]
combined_test_macro = { path = "combined_test_macro" }
tokio = { version = "1.35", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3"
yew = { version = "0.21", features = ["csr", "ssr"] }
